--- a/business/business.css
+++ b/business/business.css
@@ -22,7 +22,7 @@ body {
   z-index: 1;
   width: 100%;
   display: flex;
-  background-color: #283766;
+  background-color: #6B705C;
   top: 0; /* Add "top: 0;" to ensure it sticks to the top */
   justify-content: space-between;
   align-items: center;
@@ -60,11 +60,11 @@ body {
   
   /* Dropdown button */
 .dropdown-button {
-    font-size: 16px;
+    font-size: 22px;
     border: none;
     cursor: pointer;
     overflow: hidden;
-    background-color: white;
+    background-color: #6B705C;
     margin: 15px;
     /* margin-right: 80px; */
     border-radius: 4px;
@@ -72,28 +72,26 @@ body {
     width: 80px;
     color: black;
     margin-bottom: 20px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
   }
-  .dropdown-button :hover{
-    background-color: white;
-  }
+ 
   .dropdown-content {
     display: none;
     position: absolute; /*Adjust positioning*/
     top: 100%; /* Position below the button */
     left: 0;
-    background-color: #283766;
+    background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     height:700px;
     width: 200px;
-    color: white;
+    color: black;
     /* mix-blend-mode: difference;  */
     font-size:18px;
   }
   
   .dropdown-content a {
-    color: white;
+    color: black;
     text-decoration: none;
     display: flex;
     justify-content: center;
@@ -101,7 +99,7 @@ body {
   }
   
   .dropdown-content a:hover {
-    background-color:#2f3c63 ;
+    background-color:rgb(218, 217, 217) ;
   }
   
   .show {
@@ -138,6 +136,49 @@ body {
     color: white;
     /* mix-blend-mode: difference;  */
   }
+  .widget-img{
+    width: 90%;
+    height: 65%;
+    border-radius: 20px 20px 0px 0px;
+    /* border: 2px solid black; */
+    
+  }
+
+  .widget-img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 20px 0px 0px;
+    object-fit: cover;
+    border-radius: 3rem;
+  }
+  .widget-content{
+    position: absolute; /*Position content absolutely within the parent */
+  top: 65%; /* Position content 50% from the top */
+  /* left: 50%; Position content 50% from the left */
+  /* right: 100%; */
+  transform: translate(0%, -50%); 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid black; */
+  height: 10%;
+  width: 20%;
+  overflow: visible;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  font-weight: bolder;
+  text-decoration: underline;
+  color: black;
+  }
+  .widget-content-two{
+    height: 25%;
+  /* border: 2px solid black; */
+  width: 85%;
+  color: black;
+  padding-top: 35px;
+  }
+
  
   /* css for dashboard starts from here */
   .dashboard{
