--- a/home/style.css
+++ b/home/style.css
@@ -24,7 +24,7 @@ body{
   justify-content: space-around;
   align-items: center;
   /* border: 2px solid black; */
-  background-color: #283766; 
+  background-color: #6B705C; 
   backdrop-filter: blur(10px);
   /* flex-wrap: wrap; */
   color: white;
@@ -44,6 +44,7 @@ body{
     align-items: center;
     /* color: white; */
     width: 50%;
+    font-family: "Poppins", sans-serif;
 }
 .elements{
     display: flex;
@@ -137,6 +138,8 @@ button.btn{
 	padding-right:5%;
 	padding-bottom: 5%;
   margin-bottom: 50px;
+  width: 80%;
+  border-radius: 20px;
   
 }
 .abcd
@@ -150,11 +153,12 @@ button.btn{
 }
 #addi2
 { 
-  /* box-shadow: 0 0 10px rgb(99, 90, 90); */
-	padding-bottom: 50px;
-  margin-left:10px;
-  
-	
+  box-shadow: 0 0 10px rgb(99, 90, 90);
+	/* padding-bottom: 50px; */
+  margin-left:100px;
+  width: 95%;
+  border-radius: 20px;
+  margin-bottom: 50px;
 
 }
 .abcd2
@@ -172,6 +176,8 @@ button.btn{
 	box-shadow: 0 0 10px rgb(99, 90, 90);
 	padding-bottom: 30px;
   margin-bottom: 50px;
+  width: 80%;
+  border-radius: 20px;
 }
 .abcd3
 {
@@ -247,16 +253,62 @@ button.btn{
 
 .widget {
   flex: 0 0 auto; /* Prevent widgets from shrinking */
-  width: 400px; /* Adjust width as needed */
-  height: 600px; /* Adjust height as needed */
+  width: 350px; /* Adjust width as needed */
+  height: 550px; /* Adjust height as needed */
   margin-right: 20px; /* Adjust margin between widgets */
-  background-color: transparent;
+  background-color: black;
   box-shadow: 0 0 10px rgba(99, 90, 90, 0.814);
   border-radius: 10px;
   color: black;
   /* mix-blend-mode: difference;  */
   background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
   backdrop-filter: blur(10px);
+  border-top-left-radius: 5rem;
+}
+.widget-img{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid black; */
+  height: 75%;
+  /* box-shadow: 0 0 10px rgba(99, 90, 90, 0.814); */
+  /* border-bottom-left-radius: 5rem; */
+  border-bottom-right-radius: 5rem;
+  border-top-left-radius: 5rem;
+  overflow: hidden;
+}
+.widget-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-top-left-radius: 5rem;
+  border-bottom-right-radius: 5rem;
+}
+.widget-content{
+   position: absolute; /*Position content absolutely within the parent */
+  top: 76%; /* Position content 50% from the top */
+  /* left: 50%; Position content 50% from the left */
+  /* right: 100%; */
+  transform: translate(0%, -50%); 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid black; */
+  height: 15%;
+  overflow: visible;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  font-weight: bolder;
+  text-decoration: underline;
+  color: black;
+  /* mix-blend-mode: difference; */
+}
+.widget-content-two{
+  height: 25%;
+  /* border: 2px solid black; */
+  padding-top: 35px;
 }
 /* Hide scrollbar for Firefox */
 .flexbox-widgets::-moz-scrollbar {
@@ -394,7 +446,7 @@ a {
 
 
 .footer {
-    background-color: #283766;
+    background-color: #6B705C;
     color: #fff;
 }
 .footer-wave-svg {
